Lots of changes. I'll try to make my commits more concise in the future.

--- a/scss/extensions/_ext_button_transparent.scss
+++ b/scss/extensions/_ext_button_transparent.scss
@@ -1,35 +1,35 @@
-@mixin ext-button-transparent-style($color) {
-    @include extButtonColors(
-        $color-text: $color,
-        $color-text-hover: foregroundColor($color),
-        $color-border: $color,
-        $color-border-hover: $color,
-        $color-border-active: $color,
+
+
+@mixin ext-button-transparent-colors($color: $color-primary) {
+    @include button-colors(
         $color-background: transparent,
-        $color-background-hover: $color,
-        $color-background-active: $color,
-        $color-background-disabled: $color
+        $color-border: $color,
+        $color-text: $color
     );
+
+    &:hover, &:focus {
+        @include button-colors(
+            $color-background: $color,
+            $color-border: $color,
+            $color-text: auto
+        );
+    }
+
+    &:active {
+        @include button-colors(
+            $color-background: darken($color, 7%),
+            $color-border: darken($color, 7%),
+            $color-text: auto
+        );
+    }
 }
 
 %ext-button-transparent {
     @extend %button-layout;
-    @include transition-property(background-color, color);
-    @include transition-duration(0.5s);
+    @include ext-button-transparent-colors;
 
-    @include ext-button-transparent-style($color-primary);
-
-    &.primary { @include ext-button-transparent-style($color-primary); }
-    &.secondary { @include ext-button-transparent-style($color-secondary); }
-    &.light { @include ext-button-transparent-style($color-light); }
-    &.dark { @include ext-button-transparent-style($color-dark); }
-
-    &.small {
-        @include typeScale(-3, true);
-    }
-
-    background-color: transparent;
-    text-transform: uppercase;
-    @include typeScale(-2);
-    font-weight: bold;
+    &.primary { @include ext-button-transparent-colors($color-primary); }
+    &.secondary { @include ext-button-transparent-colors($color-secondary); }
+    &.dark { @include ext-button-transparent-colors($color-dark); }
+    &.light { @include ext-button-transparent-colors($color-light); }
 }
