--- a/scss/iassist.scss
+++ b/scss/iassist.scss
@@ -12,6 +12,8 @@ $type-base-font-size: 18px;
 $form-style: stacked;
 $fieldset-style: stacked;
 
+$button-style: transparent;
+
 @import 'cadenza';
 
 body {
