--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -17,6 +17,7 @@
     'modules/_grid',
     'modules/_layers',
     'modules/_type',
+    'modules/_anchors',
     'modules/_nav',
     'modules/_buttons',
     'modules/_forms',
@@ -30,10 +31,11 @@
 
 /* Import Extensions */
 @import
+    'extensions/_ext_button_normal',
     'extensions/_ext_button_transparent',
     'extensions/_ext_form_stacked',
-    'extensions/_ext_fieldset_stacked';
-
+    'extensions/_ext_fieldset_stacked',
+    'extensions/_ext_nav_rdio';
 
 /* Import Themes */
 @import
