--- a/scss/modules/_forms.scss
+++ b/scss/modules/_forms.scss
@@ -9,6 +9,10 @@
         border-color: $text-border-color;
         width: 100%;
 
+        @if $form-use-radius {
+            @include border-radius($text-radius);
+        }
+
         &.full {
             display: block;
             height: 100%;
