--- a/scss/modules/_layers.scss
+++ b/scss/modules/_layers.scss
@@ -15,10 +15,13 @@
     top: 0;
     left: 0;
     overflow: hidden;
+    margin: 0;
 }
 
 .layer, .page {
     @extend %layer;
+
+    &.scroll { @extend %scroll; }
 }
 
 .scroll {
