--- a/scss/style.scss
+++ b/scss/style.scss
@@ -16,6 +16,9 @@ $nav-a-padding: 2px (1rem / 2);
 $anchor-color-hover: static;
 $anchor-decoration-hover: underline;
 
+$dropdown-ul-padding: (1rem/4) 0;
+$dropdown-a-padding: (1rem/4) (1rem);
+
 @import 'cadenza.scss';
 
 body {
