--- a/scss/cadenza.scss
+++ b/scss/cadenza.scss
@@ -19,6 +19,7 @@
     'modules/_type',
     'modules/_anchors',
     'modules/_nav',
+    'modules/_dropdowns',
     'modules/_buttons',
     'modules/_forms',
     'modules/_labels',
@@ -35,6 +36,7 @@
     'extensions/_ext_button_transparent',
     'extensions/_ext_form_stacked',
     'extensions/_ext_fieldset_stacked',
+    'extensions/_ext_dropdown_normal',
     'extensions/_ext_nav_rdio';
 
 /* Import Themes */
