--- a/scss/modules/_tables.scss
+++ b/scss/modules/_tables.scss
@@ -4,6 +4,7 @@
     margin-bottom: $table-margin-bottom;
     text-align: $table-text-align;
     width: 100%;
+    border-collapse: collapse;
 
     caption {
 
